--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
     "type": "git",
     "url": "git+https://github.com/chiranz/modernjsproject.git"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": [
+      "npm run lint:fix",
+      "git add"
+    ]
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -26,6 +37,8 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
     "prettier-eslint": "^8.8.2",
     "prettier-eslint-cli": "^4.7.1"
   }
