--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint '**/*.js'",
-    "lint:fix": "prettier-eslint '**/*.js --write'"
+    "lint:fix": "prettier-eslint '**/*.js --write'",
+    "build": "rollup -c",
+    "prebuild": "rimraf dist"
   },
   "repository": {
     "type": "git",
@@ -40,6 +42,9 @@
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
     "prettier-eslint": "^8.8.2",
-    "prettier-eslint-cli": "^4.7.1"
+    "prettier-eslint-cli": "^4.7.1",
+    "rimraf": "^2.6.3",
+    "rollup": "^1.1.2",
+    "rollup-plugin-node-resolve": "^4.0.0"
   }
 }
