--- a/package.json
+++ b/package.json
@@ -33,11 +33,15 @@
   },
   "homepage": "https://github.com/chiranz/modernjsproject#readme",
   "devDependencies": {
+    "@babel/core": "^7.3.3",
+    "@babel/preset-env": "^7.3.1",
+    "@babel/preset-react": "^7.0.0",
     "eslint": "^5.14.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.0.1",
+    "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-standard": "^4.0.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.4",
@@ -45,6 +49,8 @@
     "prettier-eslint-cli": "^4.7.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.1.2",
-    "rollup-plugin-node-resolve": "^4.0.0"
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-node-resolve": "^4.0.0",
+    "rollup-plugin-terser": "^4.0.4"
   }
 }
